# React_Rust_Tauri_Crud

./: bun.lockb  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/migrations/: 20250116030957_create_todos_table.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: todos.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs  todo.rs
src-tauri/src/store/: mod.rs
src/components/: TodoList.tsx
src/components/ui/: ValidationErrors.tsx
src/models/: Todo.ts  TodoForCreate.ts  TodoStatus.ts
src/validator/: TodoValidator.ts  ValidateData.ts
